# project_hdd

./: .gitignore  CLAUDE.md  Makefile  README.md  biome.json  bunfig.toml  compose.meta.epic8.yaml  compose.meta.onda10.yaml  compose.meta.onda11.yaml  compose.meta.onda12.yaml  compose.meta.onda13.yaml  compose.meta.onda14.yaml  compose.meta.onda3.yaml  compose.meta.onda4.yaml  compose.meta.onda5.yaml  compose.meta.onda6.yaml  compose.meta.onda7.yaml  compose.meta.onda8.yaml  compose.meta.onda9.yaml  compose.meta.oracle.yaml  compose.meta.proof-noop.yaml  compose.meta.yaml  compose.override.boston.yaml  compose.prod.yaml  compose.yaml  deploy.env.example  drizzle.config.ts  eslint.config.js  litestream.yml  package.json  renovate.json  run_dod_checks.py  stack.yaml  tsconfig.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  openapi.json  pyproject.toml  run_checks.sh
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schemas_roles.py  0002_session_wave_tables.py  0003_gates.py  0004_queue_quota.py  0005_audit.py  0006_memory.py  0007_notifier_webhook.py  0008_quota_lease.py  0009_lgpd_crypto_shredding.py  0010_dogfood_gaps.py
backend/scripts/: calibration_wave.py  export_openapi.py
backend/src/hdd/: __init__.py
backend/src/hdd/adapters/: __init__.py  workspace.py
backend/src/hdd/api/: __init__.py  app.py  auth.py  deps.py  schemas.py  security.py
backend/src/hdd/application/: __init__.py  broker.py  notifications.py  retry.py
backend/src/hdd/cli/: __init__.py  main.py
backend/src/hdd/config/: __init__.py  settings.py
backend/src/hdd/contracts/: __init__.py  dtos.py  events.py  ports.py
backend/src/hdd/domain/: __init__.py  bytesize.py  capability.py  duration.py  errors.py  gate.py  marker.py  parsing.py  pii.py  session.py  vcs.py  wave.py
backend/src/hdd/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
backend/src/hdd_poc/: __init__.py  db.py  engine.py  graph.py  llm.py  runner.py
backend/tests/: test_poc.py
backend/tests/acceptance/: test_marker_acceptance.py
backend/tests/integration/: test_api_adapters.py  test_audit.py  test_cli_db.py  test_gap_store.py  test_gate_roundtrip.py  test_gate_store.py  test_lgpd.py  test_memory.py  test_persistence.py  test_producer.py  test_queue_quota.py  test_sandbox.py  test_vcs_git.py  test_verifier_docker.py  test_workspace_git.py
backend/tests/unit/: test_anchor.py  test_api.py  test_api_provider.py  test_bytesize.py  test_capability.py  test_cli.py  test_contracts.py  test_dogfood_harness.py  test_duration.py  test_events_stream.py  test_fsm.py  test_gate.py  test_git_tests_gate.py  test_marker.py  test_observability.py  test_orchestrator.py  test_parsing.py  test_pii.py  test_provider.py  test_retry.py  test_sandbox_runner.py  test_security_invariants.py  test_vcs.py  test_verifier.py  test_worker_loop.py  test_workspace.py
docs/: SECURITY.md  (+7 more)
(+439 files in other folders)
