[project]
name = "hdd-poc"
version = "0.1.0"
description = "HDD v2 — PoC de fundação (Story 1.1): LangGraph + claude -p + checkpoint Postgres durável"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdd_poc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra -q"
