[project]
name = "hdd"
version = "0.1.0"
description = "HORSE DRIVEN DEVELOPMENT (HDD) v2 — orquestração autônoma de software"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdd"]

# ---------------------------------------------------------------------------
# Tooling (enforcement mecânico dos patterns — RNF-MANT-1)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = '-ra -q -m "not integration"'
markers = [
    "integration: testes reais que invocam claude -p / Postgres (opt-in, custam quota)",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
files = ["src/hdd"]

[tool.importlinter]
root_package = "hdd"

[[tool.importlinter.contracts]]
name = "domain é puro (não importa camadas externas)"
type = "forbidden"
source_modules = ["hdd.domain"]
forbidden_modules = ["hdd.adapters", "hdd.application", "hdd.api", "hdd.cli", "hdd.contracts"]

[[tool.importlinter.contracts]]
name = "contracts só dependem de domain"
type = "forbidden"
source_modules = ["hdd.contracts"]
forbidden_modules = ["hdd.adapters", "hdd.application", "hdd.api", "hdd.cli"]

[[tool.importlinter.contracts]]
name = "application não importa adapters nem entrypoints"
type = "forbidden"
source_modules = ["hdd.application"]
forbidden_modules = ["hdd.adapters", "hdd.api", "hdd.cli"]

[[tool.importlinter.contracts]]
name = "adapters não importam application nem entrypoints"
type = "forbidden"
source_modules = ["hdd.adapters"]
forbidden_modules = ["hdd.application", "hdd.api", "hdd.cli"]
